cmake_minimum_required(VERSION 4.2.1 FATAL_ERROR)
project(block-blast-solver DESCRIPTION "C++ solvers for mobile game Block Blast! along with its minigames/moregames" LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -pedantic)
endif()
add_executable(block_blast_solver src/block_blast_solver.cpp)
add_executable(sudoku_solver src/sudoku_solver.cpp)
add_executable(hamiltonian_path src/hamiltonian_path.cpp)
target_compile_features(hamiltonian_path PRIVATE cxx_std_23)
if(MSVC)
    target_compile_options(hamiltonian_path PRIVATE /utf-8)
elseif(MINGW OR CYGWIN OR WIN32)
    target_link_libraries(hamiltonian_path PRIVATE stdc++exp)
endif()