[package]
name = "block-blast-solver"
version = "1.0.0"
edition = "2024"
rust-version = "1.88.0" # Minimum Rust version with if let-chains full support
description = "Rust port of game solvers"
readme = "README.md"
repository = "https://github.com/trungj2655/block-blast-solver"
license = "MIT"

[dependencies]
mimalloc = { version = "0.1.48", features = ["v3"] }
ndarray = "0.17.1"
scan-rules = "0.2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[[bin]]
name = "hamiltonian_path"
path = "src/hamiltonian_path.rs"

[[bin]]
name = "block_blast_solver"
path = "src/block_blast_solver.rs"

[profile.slow-release]
inherits = "release"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
